# zCore

./: Cargo.toml  rust-toolchain.toml
drivers/: Cargo.toml
kernel-hal/: Cargo.toml
zCore/: Cargo.toml
zCore/src/: main.rs
